fix(material/formbuilder): Small css fixes to visibility condition overflow and formtree properties.

--- a/projects/material/form-builder/src/node-entry.scss
+++ b/projects/material/form-builder/src/node-entry.scss
@@ -34,6 +34,8 @@ ajf-fb-node-entry {
           color: #999;
           max-height: 100px;
           max-width: 500px;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
 
         > .ajf-actions {
